--- a/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
+++ b/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
@@ -1,33 +1,22 @@
 <?php
 $slide = $block->getSlide();
+$imageTeaserData = $block->getImageTeaser();
 
-$isSvg = $slide->isSvg();
 $isSlider = $block->getIsSlider();
 $isSliderMobile = $block->getIsSliderMobile();
 $contentPlacement = $block->getContentPlacement();
 $contentAlign = $slide->getContentAlign();
 
-$slogan = $slide->getSlogan();
-$description = $slide->getDescription();
 /**
  * Call to action properties.
  */
 $cta = $slide->getCta();
 $ctaHref = $cta['href'] ?? '';
-$ctaLabel = $cta['label'] ?? '';
+
 /**
  * Image properties with support for conditional lazy loading.
  */
-$imageSrc = $origImageSrc = $slide->getSrc();
-$hasImage = !empty($origImageSrc);
-if ($hasImage) {
-    $imageSrc = 'data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=';
-}
-$imageAlt = $slide->getAlt();
-$imageSrcset = $isSvg ? '' : $slide->getSrcSet();
-$imageSizes = $isSvg ? '' : $slide->getSizes();
-$imageWidth = $slide->getWidth();
-$imageHeight = $slide->getHeight();
+$hasImage = !empty($slide->getSrc());
 /**
  * Aspect ratio calculations preventing content jumping before images load.
  */
@@ -46,23 +35,31 @@ $colorScheme = $contrastOptimizers['color_scheme'];
 $mirrorImage = $contrastOptimizers['mirror_image'];
 
 $contrastOptimizersScenarios = $contrastOptimizers['scenarios'];
-$overlay = $contrastOptimizersScenarios['overlay'] ?? null;
-$gradient = $contrastOptimizersScenarios['gradient'] ?? null;
 $textShadow = $contrastOptimizersScenarios['text_shadow'] ?? null;
 $container = $contrastOptimizersScenarios['container'] ?? null;
 
-/**
- * Badge
- */
-$badge = $slide->getBadge();
-$badgeValue = isset($badge['value']) ? $badge['value'] : null;
-$badgeAlign = isset($badge['align']) ? $badge['align'] : null;
-
 ?>
-<li class="cs-image-teaser__slide cs-image-teaser__slide--scheme-<?= $colorScheme ?><?= $hasImage ? ' cs-image-teaser__slide--image-uploaded' : '' ?>">
-    <?php if ($aspectRatioPadding and $contentPlacement != 'under'): ?>
-        <div class="cs-image-teaser__aspect-ratio" style="padding-top: <?= $aspectRatioPadding ?>%"></div>
-    <?php endif; ?>
+<li class="cs-image-teaser__slide cs-image-teaser__slide--scheme-<?= $colorScheme ?><?= $hasImage ? ' cs-image-teaser__slide--image-uploaded' : '' ?> <?= $slide->getCcCssClasses() ?>">
+    
+    <?= $this->getLayout()
+        ->createBlock(\Magento\Framework\View\Element\Template::class)
+        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/aspect_ratio_text-over-image.phtml')
+        ->setImageTeaserData($imageTeaserData)
+        ->setSlide($slide)
+        ->setContentPlacement($contentPlacement)
+        ->toHtml(); 
+    ?>
+
+    <?= $this->getLayout()
+        ->createBlock(\Magento\Framework\View\Element\Template::class)
+        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/before_slide-wrapper.phtml')
+        ->setImageTeaserData($imageTeaserData)
+        ->setSlide($slide)
+        ->setIsSlider($isSlider)
+        ->setIsSliderMobile($isSliderMobile)
+        ->setContentPlacement($contentPlacement)
+        ->toHtml(); 
+    ?>
 
     <?php if ($ctaHref): ?>
         <a href="<?= $ctaHref ?>" class="cs-image-teaser__slide-wrapper">
@@ -70,107 +67,163 @@ $badgeAlign = isset($badge['align']) ? $badge['align'] : null;
         <div class="cs-image-teaser__slide-wrapper">
     <?php endif; ?>
 
-        <?php if ($aspectRatioPadding and $contentPlacement == 'under'): ?>
-            <div class="cs-image-teaser__aspect-ratio" style="padding-top: <?= $aspectRatioPadding ?>%"></div>
-        <?php endif; ?>
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/aspect_ratio_text-under-image.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->setContentPlacement($contentPlacement)
+            ->toHtml(); 
+        ?>
 
-        <?php if ($hasImage): ?>
-            <figure class="cs-image-teaser__figure">
-                <img
-                    class="cs-image-teaser__image lazyload<?= ($isSlider || $isSliderMobile) ? ' swiper-lazy' : '' ?><?= $mirrorImage ? ' cs-image-teaser__image--mirror' : '' ?>"
-                    src="<?= $imageSrc ?>"
-                    alt="<?= $imageAlt ?>"
-                    data-src="<?= $origImageSrc ?>" 
-                    <?php if ($imageSrcset): ?>
-                        data-srcset="<?= $imageSrcset ?>"
-                    <?php endif; ?>
-                    <?php if ($imageSizes): ?>
-                        sizes="<?= $imageSizes ?>"
-                    <?php endif; ?>
-                    <?php if ($imageWidth): ?> 
-                        width="<?= $imageWidth ?>" 
-                    <?php endif; ?>
-                    <?php if ($imageHeight): ?> 
-                        height="<?= $imageHeight ?>" 
-                    <?php endif; ?>
-                >
-                <noscript>
-                    <img
-                        class="cs-image-teaser__image"
-                        src="<?= $origImageSrc ?>"
-                        alt="<?= $imageAlt ?>"
-                        <?php if ($imageSrcset): ?> 
-                            srcset="<?= $imageSrcset ?>"
-                        <?php endif; ?>
-                        <?php if ($imageSizes): ?> 
-                            sizes="<?= $imageSizes ?>"
-                        <?php endif; ?>
-                        <?php if ($imageWidth): ?> 
-                            width="<?= $imageWidth ?>" 
-                        <?php endif; ?>
-                        <?php if ($imageHeight): ?> 
-                            height="<?= $imageHeight ?>" 
-                        <?php endif; ?>
-                    >
-                </noscript>
-                <?php if ($badgeValue): ?>
-                    <div class="cs-image-teaser__badge cs-image-teaser__badge--align-x-<?= $badgeAlign['x'] ?> cs-image-teaser__badge--align-y-<?= $badgeAlign['y'] ?> ">
-                        <span class="cs-image-teaser__badge-span"> <?= $badgeValue?></span>
-                    </div>
-                <?php endif; ?>
-            </figure>
-        <?php endif; ?>
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/image.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->setIsSlider($isSlider)
+            ->setIsSliderMobile($isSliderMobile)
+            ->toHtml(); 
+        ?>
 
-        <?php if (isset($overlay['enabled']) && $overlay['enabled']): ?>
-            <div class="cs-image-teaser__overlay" style="opacity: <?= ((int)$overlay['intensity']) / 100 ?>"></div>
-        <?php endif; ?>
-        <?php if (isset($gradient['enabled']) && $gradient['enabled']): ?>
-            <div class="cs-image-teaser__gradient cs-image-teaser__gradient--direction-x-<?= $gradient['direction']['x'] ?> cs-image-teaser__gradient--direction-y-<?= $gradient['direction']['y'] ?>" style="opacity: <?= ((int)$gradient['intensity']) / 100 ?>"></div>
-        <?php endif; ?>
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/contrast_overlay.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->toHtml(); 
+        ?>
+
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/contrast_gradient.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->toHtml(); 
+        ?>
+
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/before_content-wrapper.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->setIsSlider($isSlider)
+            ->setIsSliderMobile($isSliderMobile)
+            ->setContentPlacement($contentPlacement)
+            ->toHtml(); 
+        ?>
 
         <div class="cs-image-teaser__content-wrapper cs-image-teaser__content-wrapper--content-align-x-<?= $contentAlign['x'] ?> cs-image-teaser__content-wrapper--content-align-y-<?= $contentAlign['y'] ?>"
             <?php if ($aspectRatio and $contentPlacement == 'under'): ?>
                 style="margin-top: -<?= $aspectRatioPadding ?>%; padding-top: <?= $aspectRatioPadding ?>%"
             <?php endif; ?>
         >
+
+            <?= $this->getLayout()
+                ->createBlock(\Magento\Framework\View\Element\Template::class)
+                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/before_content.phtml')
+                ->setImageTeaserData($imageTeaserData)
+                ->setSlide($slide)
+                ->setIsSlider($isSlider)
+                ->setIsSliderMobile($isSliderMobile)
+                ->setContentPlacement($contentPlacement)
+                ->toHtml(); 
+            ?>
+
             <div class="cs-image-teaser__content<?= isset($container['enabled']) && $container['enabled'] ? ' cs-image-teaser__content--container' : '' ?>">
 
-                <?php if (isset($container['enabled']) && $container['enabled']): ?>
-                    <div class="cs-image-teaser__optimizer-container" style="opacity: <?= ((int)$container['intensity']) / 100 ?>"></div>
-                <?php endif; ?>
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/contrast_container.phtml')
+                    ->setImageTeaserData($imageTeaserData)
+                    ->setSlide($slide)
+                    ->toHtml(); 
+                ?>
 
-                <?php if ($slogan || $description): ?>
-                    <div class="cs-image-teaser__text-content<?= isset($textShadow['enabled']) && $textShadow['enabled'] ? ' cs-image-teaser__text-content--text-shadow cs-image-teaser__text-content--text-shadow-' . $textShadow['intensity'] : '' ?>">
-                        <?php if ($slogan): ?>
-                            <h2 class="cs-image-teaser__slogan"><?= $slogan ?></h2>
-                        <?php endif; ?>
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/before_text-content.phtml')
+                    ->setImageTeaserData($imageTeaserData)
+                    ->setSlide($slide)
+                    ->setIsSlider($isSlider)
+                    ->setIsSliderMobile($isSliderMobile)
+                    ->setContentPlacement($contentPlacement)
+                    ->toHtml(); 
+                ?>
+                
+                <div class="cs-image-teaser__text-content<?= isset($textShadow['enabled']) && $textShadow['enabled'] ? ' cs-image-teaser__text-content--text-shadow cs-image-teaser__text-content--text-shadow-' . $textShadow['intensity'] : '' ?>">
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/slogan.phtml')
+                        ->setImageTeaserData($imageTeaserData)
+                        ->setSlide($slide)
+                        ->toHtml(); 
+                    ?>
+                    <?= $this->getLayout()
+                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/description.phtml')
+                        ->setImageTeaserData($imageTeaserData)
+                        ->setSlide($slide)
+                        ->toHtml(); 
+                    ?>
+                </div>
 
-                        <?php if ($description): ?>
-                            <p class="cs-image-teaser__description"><?= $description ?></p>
-                        <?php endif; ?>
-                    </div>
-                <?php endif; ?>
-
-                <?php if ($ctaHref and $ctaLabel): ?>
-                    <div class="cs-image-teaser__cta">
-                        <span role="button"
-                            class="cs-image-teaser__cta-button">
-                            <span class="cs-image-teaser__cta-button-span"><?= $ctaLabel ?></span>
-                            <?= $this->getLayout()
-                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                                ->setIconUrl($block->getVar('image_teaser/cta_button_icon_path', 'MageSuite_ContentConstructorFrontend'))
-                                ->setCssClass('cs-image-teaser__cta-button-icon')
-                                ->setInlined(true)
-                                ->toHtml(); 
-                            ?>
-                        </span>
-                    </div>
-                <?php endif; ?>
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/after_text-content.phtml')
+                    ->setImageTeaserData($imageTeaserData)
+                    ->setSlide($slide)
+                    ->setIsSlider($isSlider)
+                    ->setIsSliderMobile($isSliderMobile)
+                    ->setContentPlacement($contentPlacement)
+                    ->toHtml(); 
+                ?>
+                
+                <?= $this->getLayout()
+                    ->createBlock(\Magento\Framework\View\Element\Template::class)
+                    ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/cta.phtml')
+                    ->setImageTeaserData($imageTeaserData)
+                    ->setSlide($slide)
+                    ->toHtml(); 
+                ?>
             </div>
+
+            <?= $this->getLayout()
+                ->createBlock(\Magento\Framework\View\Element\Template::class)
+                ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/after_content.phtml')
+                ->setImageTeaserData($imageTeaserData)
+                ->setSlide($slide)
+                ->setIsSlider($isSlider)
+                ->setIsSliderMobile($isSliderMobile)
+                ->setContentPlacement($contentPlacement)
+                ->toHtml(); 
+            ?>
         </div>
+
+        <?= $this->getLayout()
+            ->createBlock(\Magento\Framework\View\Element\Template::class)
+            ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/after_content-wrapper.phtml')
+            ->setImageTeaserData($imageTeaserData)
+            ->setSlide($slide)
+            ->setIsSlider($isSlider)
+            ->setIsSliderMobile($isSliderMobile)
+            ->setContentPlacement($contentPlacement)
+            ->toHtml(); 
+        ?>
     <?php if ($ctaHref): ?>
         </a>
     <?php else: ?>
         </div>
     <?php endif; ?>
+
+    <?= $this->getLayout()
+        ->createBlock(\Magento\Framework\View\Element\Template::class)
+        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/slide_elements/hotspots/after_slide-wrapper.phtml')
+        ->setImageTeaserData($imageTeaserData)
+        ->setSlide($slide)
+        ->setIsSlider($isSlider)
+        ->setIsSliderMobile($isSliderMobile)
+        ->setContentPlacement($contentPlacement)
+        ->toHtml(); 
+    ?>
 </li>
