Additional check for cc_css_classes to avoid critical errors

--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -52,7 +52,9 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
 
 $containerClasses = ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-container--image-teaser-window-width' : '';
 $containerClasses = ' ' . $block->getContainerMix();
-$containerClasses .= ' ' . $imageTeaser['cc_css_classes'];
+if (isset($imageTeaser['cc_css_classes'])):
+    $containerClasses .= ' ' . $imageTeaser['cc_css_classes'];
+endif;
 
 $jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig']) : '{}';
 ?>
