--- a/view/frontend/templates/component/image_teaser/elements/nav-next.phtml
+++ b/view/frontend/templates/component/image_teaser/elements/nav-next.phtml
@@ -1,10 +1,11 @@
 <?php
 $imageTeaserData = $block->getImageTeaserData();
 ?>
+
 <button class="cs-image-teaser__nav cs-image-teaser__nav--next" type="button">
     <?= $this->getLayout()
         ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-        ->setIconUrl($block->getVar('image_teaser/navigation/arrows/next/path'))
+        ->setIconUrl($block->getIcon())
         ->setCssClass('cs-image-teaser__nav-icon')
         ->setInlined(true)
         ->setLazyLoaded(false)
