[Teaser and text] Custom fields

--- a/view/frontend/templates/component/teaser_and_text.phtml
+++ b/view/frontend/templates/component/teaser_and_text.phtml
@@ -24,6 +24,9 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
 
 $containerClasses = ($teaserWidth == 'window') ? ' cs-container--image-teaser-window-width' : '';
 $containerClasses = ' ' . $block->getContainerMix();
+if (isset($imageTeaser['cc_css_classes'])):
+    $containerClasses .= ' ' . $imageTeaser['cc_css_classes'];
+endif;
 
 $jsConfig = isset($imageTeaser['jsConfig']) ? json_encode($imageTeaser['jsConfig']) : '{}';
 ?>
