--- a/view/frontend/templates/product/list/category-teasers.phtml
+++ b/view/frontend/templates/product/list/category-teasers.phtml
@@ -54,13 +54,12 @@ if ($teasersConfig): ?>
             <?= $this->getLayout()
                 ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
                 ->setData($newTeaserConfig)
-                ->setCategoryTeaser(true)
+                ->setGridTeaser(true)
                 ->setTeaserId($i)
                 ->setTeaserData($teaser)
-                ->setGridClass($block->getGridClass())
                 ->setBrickClass($block->getBrickClass())
-                ->setMix('cs-image-teaser--category-teaser ' . $block->getMix())
-                ->setContainerMix('cs-container--category-teaser ' . $block->getContainerMix())
+                ->setMix('cs-image-teaser--grid-teaser ' . $block->getMix())
+                ->setContainerMix('cs-container--grid-teaser ' . $block->getContainerMix())
                 ->toHtml();
             ?>
         <?php endif; ?>
