NKD-711 Products grid frontend bugs fix

--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -5,8 +5,7 @@ $visibility = $block->getVisibilityClass();
 
 $items = $viewModel->getItems();
 
-$componentClasses = ' cs-products-grid--with-hero';
-$componentClasses .= $block->getSkipSpacing() ? ' cs-products-grid--skip-spacing' : ''; 
+$componentClasses = $block->getSkipSpacing() ? ' cs-products-grid--skip-spacing' : ''; 
 $componentClasses .= ' ' . $block->getVar('product_grid/additional_css_classes');
 ?>
 
