Add proper closing tag in component button phtml

--- a/view/frontend/templates/component/button.phtml
+++ b/view/frontend/templates/component/button.phtml
@@ -33,5 +33,5 @@ $componentClasses .= ' ' . $block->getVar('button/additional_css_classes');
                 </svg>
             </a>
         </div>
-    <div>
+    </div>
 </div>
